# jamesbond

./: CMakeLists.txt  LICENSE
include/: bilinearminmax.h  capi.h  gamearena.h  gamerecording.h  gamestate.h  player.h  rand.h  tourney.h
include/players/: biasedrandom.h  bilinear.h  qlearner.h  random.h  shapley.h
src/: bilinearminmax.cpp  bilinearsolve.cpp  capi.cpp  gamearena.cpp  main.cpp  reachability_analysis.cpp
src/players/: bilinear.cpp  qlearner.cpp  shapley.cpp
tests/: CMakeLists.txt  test_capi.cpp
wrapper/: ns_jamesbond.py
